1844 将所有数字用字符替换

--- a/code/makefile
+++ b/code/makefile
@@ -7,6 +7,13 @@ CXXFLAGS=-std=c++11 -I ./includes
 *:$(findstring *,$(SRC))
 	$(CXX) $@ $(CXXFLAGS) -o $^
 
+all:
+	make $(foreach file,$(BIN),$(file))
 
+test:
+	$(foreach file,$(BIN),./$(file);)
+
+
+.PHONY:clean
 clean:
-	rm -rf `ls | grep [^cpp]$$`
+	rm -rf $(BIN)
