--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: help
-      run: bash /leetcode/help.sh
+      run: 
+        cd ${{ github.workspace }}
+        bash /leetcode/help.sh
 
 
