--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,7 +12,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: github-actions-up-and-running/pr-comment@v1.0.0
     - name: compile
       run: |
         cd ${{ github.workspace }}/code
@@ -22,6 +21,7 @@ jobs:
         cd ${{ github.workspace }}/code
         echo "::set-output name=test_result::$(make test)"
     - name: Comment
+        uses: github-actions-up-and-running/pr-comment@v1.0.0
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           message: ${{ steps.test.outputs.test_result }}
