--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,10 +20,11 @@ jobs:
       run: |
         cd ${{ github.workspace }}/code
         echo "::set-output name=test_result::$(make test)"
-    - name: Comment
-        uses: github-actions-up-and-running/pr-comment@v1.0.0
+    - name: PR Comment
+        uses: github-actions-up-and-running/pr-comment@v1.0.1
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           message: ${{ steps.test.outputs.test_result }}
+
 
                     
