--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,11 +20,11 @@ jobs:
     - name: test
       run: |
         cd ${{ github.workspace }}/code
-        echo "::set-output name=test_result::$(make test)"
+        make test
     - name: Comment
       uses: JoseThen/comment-pr@v1.1.1
       with:
-        comment: ${{ steps.test.outputs.test_result }}
+        comment: $(make test)
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
 
