--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,11 +22,13 @@ jobs:
         cd ${{ github.workspace }}/code
         make test
     - name: Comment
-      uses: JoseThen/comment-pr@v1.1.1
-      with:
-        comment: $(make test)
+      uses: thollander/actions-comment-pull-request@v1.4.1
+        with:
+        message: |
+          Hello $(make test) 
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+
+
 
 
 
