--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,9 +24,10 @@ jobs:
     - name: Comment
       uses: thollander/actions-comment-pull-request@v1.4.1
         with:
-        message: |
-          Hello $(make test) 
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          message: |
+            Hello 
+            $(make test) 
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 
 
