--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,13 +20,13 @@ jobs:
     - name: test
       run: |
         cd ${{ github.workspace }}/code
-        make test
-        echo "::set-output name=test_result::$(make test)"
+        make test > result.md
     - name: comment
-      uses: NejcZdovc/comment-pr@v1.1.1
+      uses: NejcZdovc/comment-pr@v1
       with:
-        message: "`${{ steps.test.outputs.test_result }}`"
-        github_token: ${{secrets.GITHUB_TOKEN}}
+        file: "result.md"
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
 
 
 
