--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,11 +20,9 @@ jobs:
     - name: test
       run: |
         cd ${{ github.workspace }}/code
-        make test > result.md
+        make test > ${{ github.workspace }}/.github/workflows/result.md
     - name: comment
       uses: NejcZdovc/comment-pr@v1
-      run: 
-        cd ${{ github.workspace }}/code
       with:
         file: "result.md"
       env:
