--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,6 +22,8 @@ jobs:
         cd ${{ github.workspace }}/code
         make test > ${{ github.workspace }}/.github/workflows/result.md
     - name: comment
+      permissions:
+        pull-requests: write
       uses: NejcZdovc/comment-pr@v1
       with:
         file: "result.md"
