--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,6 +10,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    permissions: write-all
 
     steps:
     - uses: actions/checkout@v3
@@ -22,8 +23,6 @@ jobs:
         cd ${{ github.workspace }}/code
         make test > ${{ github.workspace }}/.github/workflows/result.md
     - name: comment
-      permissions:
-        pull-requests: write
       uses: NejcZdovc/comment-pr@v1
       with:
         file: "result.md"
