--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,6 +18,7 @@ jobs:
       run: |
         cd ${{ github.workspace }}/code
         make all
+        ls | grep .*-test
     - name: test
       run: |
         cd ${{ github.workspace }}/code
