--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -21,17 +21,17 @@ jobs:
     - name: test
       run: |
         cd ${{ github.workspace }}/code
-        echo "::set-output name=test_result::$(make test)"
+        make test > ${{ github.workspace }}/.github/workflows/result.md
     - name: comment
-      uses: NejcZdovc/comment-pr@v1.1.1
+      uses: NejcZdovc/comment-pr@v1
       with:
-        message: "`${{ steps.test.outputs.test_result }}`"
-        github_token: ${{secrets.GITHUB_TOKEN}}
-
+        file: "result.md"
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
     - name: upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: my-artifact
+        name: ${{ github.run_number }}
         path: ${{ github.workspace }}/code/.*-test$
 
 
