--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -32,7 +32,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: ${{ github.run_number }}
-        path: ${{ github.workspace }}/code/.*-test$
+        path: ${{ github.workspace }}/code/1-test
 
 
 
