--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,7 +13,8 @@ jobs:
     permissions: write-all
 
     steps:
-    - uses: actions/checkout@v3
+    - name: checkout
+      uses: actions/checkout@v3
     - name: compile
       run: |
         cd ${{ github.workspace }}/code
@@ -21,8 +22,9 @@ jobs:
     - name: test
       run: |
         cd ${{ github.workspace }}/code
-        make test > ${{ github.workspace }}/.github/workflows/result.md
-    - name: comment
+        echo "The test result is : " > ${{ github.workspace }}/.github/workflows/result.md
+        make test >> ${{ github.workspace }}/.github/workflows/result.md
+    - name: PS comment
       uses: NejcZdovc/comment-pr@v1
       with:
         file: "result.md"
