--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,10 +22,11 @@ jobs:
     - name: test
       run: |
         cd ${{ github.workspace }}/code
-        echo "The test result is : " > ${{ github.workspace }}/.github/workflows/result.md
+        echo "the test result is : " > ${{ github.workspace }}/.github/workflows/result.md
         make test >> ${{ github.workspace }}/.github/workflows/result.md
     - name: PS comment
       uses: NejcZdovc/comment-pr@v1
+      if: github.event_name == 'pull_request'
       with:
         file: "result.md"
       env:
