--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,8 +24,9 @@ jobs:
         cd ${{ github.workspace }}/code
         echo "The test result is : " > ${{ github.workspace }}/.github/workflows/result.md
         make test >> ${{ github.workspace }}/.github/workflows/result.md
-    - name: PS comment
+    - name: PR comment
       uses: NejcZdovc/comment-pr@v1
+      if: github.event_name == 'pull_request'
       with:
         file: "result.md"
       env:
