--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -33,7 +33,7 @@ jobs:
     - name: Create comment from markdown file
       uses: GrantBirki/comment@v2.0.0
       with:
-        file: /home/runner/work/test/test/.github/workflows/result.md
+        file: ${{ github.workspace }}/.github/workflows/result.md
         issue-number: 9
         token: ${{ github.token }}
         repository: ${{ github.repository }}
