--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -30,17 +30,17 @@ jobs:
         file: "result.md"
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-    - name: Create comment from markdown file
-      uses: GrantBirki/comment@v2.0.0
-      with:
-        file: ${{ github.workspace }}/.github/workflows/result.md
-        issue-number: 9
-        token: ${{ github.token }}
-        repository: ${{ github.repository }}
-        vars: |
-          sha: ${{ github.sha }}
-          environment: production
-          app: cool-app
+    # - name: Create comment from markdown file
+    #   uses: GrantBirki/comment@v2.0.0
+    #   with:
+    #     file: ${{ github.workspace }}/.github/workflows/result.md
+    #     issue-number: 9
+    #     token: ${{ github.token }}
+    #     repository: ${{ github.repository }}
+    #     vars: |
+    #       sha: ${{ github.sha }}
+    #       environment: production
+    #       app: cool-app
     - name: upload artifact
       uses: actions/upload-artifact@v3
       with:
